--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: zxiiro's blog
 subtitle:
 description:
 author: Thanh Ha
-language:
+language: en
 timezone:
 
 # URL
@@ -38,10 +38,10 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
-  line_number: true
-  auto_detect: true
-  tab_replace:
+    enable: true
+    line_number: true
+    auto_detect: true
+    tab_replace:
 
 # Category & Tag
 default_category: uncategorized
@@ -65,9 +65,61 @@ pagination_dir: page
 ## Themes: http://hexo.io/themes/
 theme: hueman
 
+theme_config:
+    # Logo Url
+    # Please enter an absolute path to your logo file
+    # or remove the following line with replacing logo-header.png with your own logo
+    logo:
+
+    # Header
+    menu:
+      Home: /blog
+      # Delete this row if you don't want categories in your header nav bar
+      Categories:
+      About: /about/index.html
+
+    # Article list grouped by year
+    groupByYear: true
+
+    # Content
+    fancybox: true
+
+    # Thumbnail
+    thumbnail: true
+
+    # Scroll Loading
+    scrollLoading: true
+
+    # Sidebar
+    sidebar: left # sidebar's position (left or right)
+    social_links:
+      twitter: https://twitter.com/zxiiro
+      github: https://github.com/zxiiro
+    widgets:
+    - recent_posts
+    - category
+    - archive
+    - tag
+    - tagcloud
+    - links
+
+    # Links
+    links:
+      Hexo: http://hexo.io
+
+    # Don't Use Google APIs if you are in google-blocked areas
+    use_google_apis: false
+
+    # Miscellaneous
+    google_analytics:
+    favicon: /favicon.png
+    fb_admins:
+    fb_app_id:
+
+
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type: git
-  repository: git@github.com:zxiiro/blog.git
-  branch: gh-pages
+    type: git
+    repository: git@github.com:zxiiro/blog.git
+    branch: gh-pages
