--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ theme_config:
     # Logo Url
     # Please enter an absolute path to your logo file
     # or remove the following line with replacing logo-header.png with your own logo
-    logo:
+    logo: /blog/css/images/logo.png
 
     # Header
     menu:
