Add Google Analytics
Signed-off-by: Thanh Ha <thanh.ha@alumni.carleton.ca>

--- a/_config.yml
+++ b/_config.yml
@@ -108,10 +108,10 @@ theme_config:
       Hexo: http://hexo.io
 
     # Don't Use Google APIs if you are in google-blocked areas
-    use_google_apis: false
+    use_google_apis: true
 
     # Miscellaneous
-    google_analytics:
+    google_analytics: UA-46385504-1
     favicon: /favicon.png
     fb_admins:
     fb_app_id:
