--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://www.zxiiro.ca
-root: /blog/
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -72,14 +72,14 @@ theme_config:
     # Logo Url
     # Please enter an absolute path to your logo file
     # or remove the following line with replacing logo-header.png with your own logo
-    logo: /blog/css/images/logo.png
+    logo: /css/images/logo.png
 
     # Header
     menu:
-      Home: /blog
+      Home: /
       # Delete this row if you don't want categories in your header nav bar
       Categories:
-      About: /blog/about/index.html
+      About: /about/
 
     # Article list grouped by year
     groupByYear: true
