--- a/_config.yml
+++ b/_config.yml
@@ -123,5 +123,5 @@ theme_config:
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
     type: git
-    repository: git@github.com:zxiiro/blog.git
-    branch: gh-pages
+    repository: git@github.com:zxiiro/zxiiro.github.io.git
+    branch: master
