--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ theme_config:
     menu:
       Home: /
       # Delete this row if you don't want categories in your header nav bar
-      Categories:
+      # Categories:
       About: /about/
 
     # Article list grouped by year
