--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description:
 author: Thanh Ha
 language: en
-timezone:
+timezone: America/Toronto
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
